crates/plotnik-tests/tests/04-emit/types/captures/unrelated_same_name_unlabeled_conflict_keeps_capture_type_warning.txt
Q = [
  {
    {
      {
        (identifier) @id
      } @x :: text
    } @row
    (identifier) @x
  }
  {
    (identifier) @other
  } @x
]
------------------ DIAGNOSTICS -------------------
warning: capture type `text` replaces structured data with source text
 --> query.ptk:6:12
  |
6 |       } @x :: text
  |            ^^^^^^^
  |
help: result fields, cases, text, or boolean values produced inside the capture will not be returned

error: capture `@x` has incompatible types across alternatives
  --> query.ptk:8:18
   |
 8 |     (identifier) @x
   |                  ^^
...
12 |   } @x
   |     -- and a different type here
   |
help: make every alternative produce the same type, or label the alternatives for a variant type
